[package]
name = "schnorr"
version = "0.1.0"
authors = ["nitin <nitin.mahendru88@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
curv = {git = "ssh://git@github.com/nmahendru/curv.git", tag = "v0.6.1"}
sha2 = "0.9.3"
